# compressed_qcsim

./: README.md  make.inc
circuits/: grover_47q.qasmf  grover_59.qasmf  grover_61q.qasmf  qaoa_36.qasmf  qaoa_42.qasmf  qaoa_43.qasmf  qaoa_45.qasmf  qaoa_46.qasmf  qft_36.qasmf  sup_5_9_11.qasmf  sup_6_6_20.qasmf  sup_6_7_20.qasmf  sup_7_5_20.qasmf
sz-2.2.3.2-qcsim/: CMakeLists.txt  Makefile.in  README  configure  configure.ac
sz-2.2.3.2-qcsim/NetCDFReader/: Makefile.linux
sz-2.2.3.2-qcsim/example/: CMakeLists.txt  Makefile.am  Makefile.bk  Makefile.in  sz.c  sz.config  sz_gsl.c  sz_openmp.c  sz_pastri.c  sz_randomaccess.c  testdouble_CompDecomp_pastri.c  testdouble_compress_qcsim.c  testdouble_compress_ts.c  testdouble_decompress.c  testdouble_decompress_qcsim.c  testfloat_CompDecomp2.c  testfloat_compress.c  testfloat_compress_ts.c
sz-2.2.3.2-qcsim/example/testdata/x86/: out.h5  testfloat_8_8_128.dat.200  testfloat_8_8_128.dat.ari
sz-2.2.3.2-qcsim/hdf5-filter/H5Z-SZ/test/: Makefile  result_type.i32  test_mpio2.c
sz-2.2.3.2-qcsim/sz/: CMakeLists.txt  Makefile.am  Makefile.in
sz-2.2.3.2-qcsim/sz/include/: CacheTable.h  MultiLevelCacheTable.h  MultiLevelCacheTableWideInterval.h  TightDataPointStorageD.h  dataCompression.h  sz.h  sz_double.h  sz_float.h  szd_double.h  szd_double_pwr.h  szd_float.h
sz-2.2.3.2-qcsim/sz/src/: ByteToolkit.c  CacheTable.c  CompressElement.c  DynamicByteArray.c  Huffman.c  MultiLevelCacheTableWideInterval.c  TightDataPointStorageD.c  TightDataPointStorageF.c  TightDataPointStorageI.c  conf.c  dataCompression.c  sz.c  sz_double.c  sz_double_pwr.c  sz_float.c  szd_double.c  szd_double_pwr.c  szd_float.c  szd_float_pwr.c  utility.c
sz-2.2.3.2-qcsim/test/travis-ci/: test.sh
sz-2.2.3.2-qcsim/test/travis-ci/SZ-travis-testdata-master/travis-testdata/: sz.config
util/: mpi.cpp  (+1 more)
(+12 files in other folders)
